--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,12 @@
     </noscript>
     <div id="root"></div>
     <script>
+      // HACK
+      if (window.conflux != undefined) {
+        window.ethereum = window.conflux;
+        window.web3 = window.conflux;
+      }
+
       // Dragons 🐉 have been reintroduced into the client, but hear us out:
       // Web3.js mutates the ethereum object, and this causes an issue when
       // connecting to a local chain, as for some reason the send method stops
@@ -37,7 +43,9 @@
       // and subsequently web3-react to fail. A solution we found was cloning
       // the ethereum object before it can be mutated, and passing that to
       // use-wallet.
-      window.cleanEthereum = { ...window.ethereum }
+
+      // TODO: might need spread syntax to make it work on private networks
+      window.cleanEthereum = window.ethereum
     </script>
     <script src="./index.js"></script>
   </body>
