--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,32 @@
         window.ethereum = window.conflux;
         window.web3 = window.conflux;
 
+        const updateSelected = () => {
+          if (typeof window.conflux.selectedAddress !== 'undefined' && window.conflux.selectedAddress !== null) {
+            window.conflux.selectedAddress = window.ConfluxJSSDK.format.hexAddress(window.conflux.selectedAddress);
+          }
+        }
+
+        updateSelected();
+
+        var enableOriginal = window.conflux.enable;
+
+        window.conflux.enable = async function() {
+          const self = this;
+          const addr = await enableOriginal.call(self);
+          const hex = window.ConfluxJSSDK.format.hexAddress(addr[0]); // TODO
+          updateSelected();
+          return [hex];
+        }
+
+        window.conflux.on('accountsChanged', function(accounts) {
+          updateSelected();
+        });
+
+        window.conflux.on('connect', function(accounts) {
+          updateSelected();
+        });
+
         var sendAsyncOriginal = window.conflux.sendAsync;
 
         window.conflux.sendAsync = function(data, callback) {
@@ -45,6 +71,11 @@
             return callback(new Error(`Unsupported method: '${data.method}'`));
           }
 
+          // TODO
+          if (data.method === 'eth_requestAccounts') {
+            return;
+          }
+
           if (data.method === 'eth_sendTransaction') {
             data.method = 'cfx_sendTransaction';
 
@@ -53,7 +84,31 @@
             delete data.params[0].gasPrice;
           }
 
-          sendAsyncOriginal.call(self, data, callback);
+          return sendAsyncOriginal.call(self, data, (err, res) => {
+            if (err) return callback(err);
+
+            if (data.method === 'eth_getBlockByNumber') {
+              res.result.miner = window.ConfluxJSSDK.format.hexAddress(res.result.miner);
+            }
+
+            // console.log("err", err, "res", res);
+            callback(err, res);
+          });
+        }
+
+        var sendOriginal = window.conflux.send;
+
+        window.conflux.send = function(data) {
+          // console.log("Conflux Portal send:", data);
+          const self = this;
+
+          // TODO
+          if (data === 'eth_requestAccounts') {
+            return callback(new Error(`Unsupported method: '${data}'`));
+            // return;
+          }
+
+          return sendOriginal.call(self, data);
         }
       }
 
