--- a/src/index.html
+++ b/src/index.html
@@ -1,137 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" />
-  <link rel="shortcut icon" type="image/svg+xml" href="./assets/favicon.svg" />
-  <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
-  <title>Aragon</title>
-  <style>
-    html,
-    body {
-      min-height: 100vh;
-      margin: 0;
-      padding: 0;
-      background: no-repeat center/132px url(/assets/logo.png),
-        linear-gradient(186deg, #32fff5 -100%, #08bee5 80%) !important;
-      /* override the background set by aragonUI */
-    }
-  </style>
-</head>
-
-<body>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <div id="root"></div>
-  <script>
-    // HACK
-    if (window.conflux != undefined) {
-      window.ethereum = window.conflux;
-      window.web3 = window.conflux;
-
-      const updateSelected = () => {
-        if (typeof window.conflux.selectedAddress !== 'undefined' && window.conflux.selectedAddress !== null) {
-          window.conflux.selectedAddress = window.ConfluxJSSDK.format.hexAddress(window.conflux.selectedAddress);
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" />
+    <link rel="shortcut icon" type="image/svg+xml" href="./assets/favicon.svg" />
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+    <title>Aragon</title>
+    <style>
+        html,
+        body {
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            background: no-repeat center/132px url(/assets/logo.png),
+            linear-gradient(186deg, #32fff5 -100%, #08bee5 80%) !important;
+            /* override the background set by aragonUI */
         }
+    </style>
+  </head>
+
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <script>
+      if (window.conflux !== undefined) {
+        window.ethereum = window.conflux;
+        window.web3 = window.conflux;
       }
 
-      updateSelected();
+      // Dragons 🐉 have been reintroduced into the client, but hear us out:
+      // Web3.js mutates the ethereum object, and this causes an issue when
+      // connecting to a local chain, as for some reason the send method stops
+      // working properly and can't get the chainId. This causes use-wallet
+      // and subsequently web3-react to fail. A solution we found was cloning
+      // the ethereum object before it can be mutated, and passing that to
+      // use-wallet.
 
-      var enableOriginal = window.conflux.enable;
+      window.cleanEthereum = { ...window.ethereum };
+    </script>
+    <script src="./index.js"></script>
 
-      window.conflux.enable = async function() {
-        const self = this;
-        const addr = await enableOriginal.call(self);
-        const hex = window.ConfluxJSSDK.format.hexAddress(addr[0]); // TODO
-        updateSelected();
-        return [hex];
-      }
+    <script>
+      window.intercomSettings = {
+        app_id: "nqw0wy6r"
+      };
+    </script>
 
-      window.conflux.on('accountsChanged', function(accounts) {
-        updateSelected();
-      });
+    <script>
+      // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/nqw0wy6r'
+      (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/nqw0wy6r';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+    </script>
 
-      window.conflux.on('connect', function(accounts) {
-        updateSelected();
-      });
-
-      var sendAsyncOriginal = window.conflux.sendAsync;
-
-      window.conflux.sendAsync = function(data, callback) {
-        // console.log("Conflux Portal sendAsync:", data);
-        const self = this;
-
-        if (data.method === 'eth_chainId' || data.method === 'net_version') {
-          return callback(new Error(`Unsupported method: '${data.method}'`));
-        }
-
-        // TODO
-        if (data.method === 'eth_requestAccounts') {
-          return;
-        }
-
-        if (data.method === 'eth_sendTransaction') {
-          data.method = 'cfx_sendTransaction';
-
-          // workaround for a bug where storage limit is not estimated automatically
-          delete data.params[0].gas;
-          delete data.params[0].gasPrice;
-        }
-
-        return sendAsyncOriginal.call(self, data, (err, res) => {
-          if (err) return callback(err);
-
-          if (data.method === 'eth_getBlockByNumber') {
-            res.result.miner = window.ConfluxJSSDK.format.hexAddress(res.result.miner);
-          }
-
-          // console.log("err", err, "res", res);
-          callback(err, res);
-        });
-      }
-
-      var sendOriginal = window.conflux.send;
-
-      window.conflux.send = function(data) {
-        // console.log("Conflux Portal send:", data);
-        const self = this;
-
-        // TODO
-        if (data === 'eth_requestAccounts') {
-          return callback(new Error(`Unsupported method: '${data}'`));
-          // return;
-        }
-
-        return sendOriginal.call(self, data);
-      }
-    }
-
-    // Dragons 🐉 have been reintroduced into the client, but hear us out:
-    // Web3.js mutates the ethereum object, and this causes an issue when
-    // connecting to a local chain, as for some reason the send method stops
-    // working properly and can't get the chainId. This causes use-wallet
-    // and subsequently web3-react to fail. A solution we found was cloning
-    // the ethereum object before it can be mutated, and passing that to
-    // use-wallet.
-
-    // TODO: might need spread syntax to make it work on private networks
-    window.cleanEthereum = window.ethereum
-  </script>
-  <script src="./index.js"></script>
-
-  <script>
-    window.intercomSettings = {
-      app_id: "nqw0wy6r"
-    };
-  </script>
-
-  <script>
-    // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/nqw0wy6r'
-    (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/nqw0wy6r';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-  </script>
-
-</body>
+  </body>
 </html>
